Updated site with latest changes

--- a/demo.html
+++ b/demo.html
@@ -305,8 +305,8 @@
     }
   }
   .card-photo {
-    width: 100px;
-    height: 120px;
+    width: 140px;
+    height: 140px;
     border-radius: 50%;
     border: 5px solid white;
     margin-bottom: 20px;
@@ -419,7 +419,7 @@
   <div class="card-container">
     <div class="greeting-card" id="currentCard">
       <button class="close-btn" onclick="closeCardsOverlay()">&times;</button>
-      <img class="card-photo" id="cardPhoto" src="images/2.png" alt="Birthday Person" />
+      <img class="card-photo" id="cardPhoto" src="images/7.png" alt="Birthday Person" />
       <div class="card-message" id="cardMessage"></div>
       <div class="card-navigation" id="cardNavigation">
         <button class="nav-btn" id="prevBtn" onclick="previousCard()">← Previous</button>
@@ -762,7 +762,7 @@
 
   // Greeting Cards list
   const greetingCards = [
-    { message: "🎉 Happy Birthday Chechimaaa! 🎉\n\nEven though miles separate us, my heart is right there with you, celebrating every moment of your special day.\n\nI need to say something! Click the button below ❤️" },
+    { message: "🎉 Happy Birthday Chechimaaa! 🎉\n\nEven though miles separate us, my heart is right there with you, celebrating every moment of your special day.❤️" },
     { message: "💖 To my dearest Chechimaaa, 💖\n\nWishing you all the joy, laughter, and love that you bring into my life every day. I miss you so much!" },
     { message: "🌍 Happy Birthday from afar! 🌍\n\nNo matter the distance, you’re always close to my heart. Here’s to amazing memories and new adventures!" },
     { message: "🥰 Dear Chechimaaa, 🥰\n\nMay this year bring you happiness, success, and everything you dream of. I’m counting the days until we can celebrate together!" }
