--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 </video>
 
 <section>
-  <h3>Dear Treesa,</h3>
+  <h3>Dear chechimaaa,</h3>
   <p class="greeting-text">
-    🎉 Happy Birthday Chechimaaa! 🎉Chechimaaa, ever since you went abroad after your marriage, I really miss having you around. I often think about our last vacation together—it was so much fun, full of laughter and little moments that I’ll always treasure. You’ve always been there for me, caring and treating me like no one else, and I can’t express how much that means to me. Even though we are far apart, the bond we share is unbreakable, and I hope this birthday brings you all the happiness and love that you deserve❤️ 
+    🎉 Happy Birthday Chechimaaa!🎉 Ever since you went abroad after your marriage, I really miss having you around. I often think about our last vacation together—it was so much fun, full of laughter and little moments that I’ll always treasure. You’ve always been there for me, caring and treating me like no one else, and I can’t express how much that means to me. Even though we are far apart, the bond we share is unbreakable, and I hope this birthday brings you all the happiness and love that you deserve❤️ 
   </p>
 
   <div class="slideshow" id="slideshow">
