Updated demo page title

--- a/demo.html
+++ b/demo.html
@@ -369,8 +369,8 @@
 </video>
 
 <section class="countdown">
-  <h3>Countdown to the Big Moment!</h3>
-  <p>Get ready for the celebration on September 25!</p>
+  <h3>Itz Your Birthday</h3>
+  <p>September 25!</p>
   <div class="timer" id="timer">🎉 Time to Celebrate! 🎉</div>
   <div class="cake-section">
     <button id="cakeBtn" disabled>Cut the Cake Now</button>
